# vless-proxy

./: .env.example  .gitignore  README.md  README_RU.md  config.py  install-xray.sh  install.sh  main.py  pyproject.toml  requirements.txt  vless.txt.example
.github/workflows/: deploy.yml
api/: server.py
bot/: bot.py  strings.py
core/: health.py  manager.py  parser.py  storage.py  subscription.py  watcher.py  xray.py
core/storage/: __init__.py  _ddl.py  _models.py  _storage.py
core/xray/: __init__.py  _config.py  _process.py
project_docs/: 00-overview.md  01-config.md  02-parser.md  03-storage.md  04-xray.md  05-health.md  06-manager.md  07-api.md  08-bot.md  09-file-watcher.md  10-systemd.md
project_docs/en/: 00-overview.md  01-config.md  02-parser.md  03-storage.md  04-xray.md  05-health.md  06-manager.md  07-api.md  08-bot.md  09-watcher.md  10-systemd.md  11-subscription.md
project_docs/ru/: 00-overview.md  01-config.md  02-parser.md  03-storage.md  04-xray.md  05-health.md  06-manager.md  07-api.md  08-bot.md  09-watcher.md  10-systemd.md  11-subscription.md
scripts/: install-xray.sh  install.sh  update-proxies.sh  vless-manager.service  vless-manager.service.example
tests/: test_api.py  test_bot.py  test_file_watcher.py  test_health.py  test_manager.py  test_parser.py  test_storage.py  test_subscription.py  test_xray.py
watcher/: file_watcher.py
