[project]
name = "vless-proxy"
version = "0.1.0"
description = "VLESS proxy pool manager with xray-core, REST API and Telegram bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.29.0",
    "aiohttp>=3.14.1",
    "aiohttp-socks>=0.8.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
